# pipe-cpp

./: .gitignore  CMakeLists.txt  README.md  process.cpp
process/: process.cpp
sinc/: sinc.cpp
source/: source.cpp
